{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 62,
  "lineage": "3414196c-7a94-785e-c26a-a080b03b983d",
  "resources": [
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:internet-gateway/igw-0f5c0fb181011f0f6",
            "id": "igw-0f5c0fb181011f0f6",
            "owner_id": "058264225399",
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route",
      "name": "InternetGatewayConnect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5c0fb181011f0f6",
            "id": "r-rtb-03c43183c25c2e2ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03c43183c25c2e2ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_internet_gateway.gateway",
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_vpc.engine-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:route-table/rtb-03c43183c25c2e2ab",
            "id": "rtb-03c43183c25c2e2ab",
            "owner_id": "058264225399",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route-connections",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075219d3a3c4b0f70",
            "route_table_id": "rtb-03c43183c25c2e2ab",
            "subnet_id": "subnet-08488290d59dc9351"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039ac8e802d86a55b",
            "route_table_id": "rtb-03c43183c25c2e2ab",
            "subnet_id": "subnet-0a91dc68987c391cb"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c230184b5565e2e4",
            "route_table_id": "rtb-03c43183c25c2e2ab",
            "subnet_id": "subnet-07a6e3f8960c13c86"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e123e183d2d73610",
            "route_table_id": "rtb-03c43183c25c2e2ab",
            "subnet_id": "subnet-0af862dc61e1aa13f"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071b228a52ce1bead",
            "route_table_id": "rtb-03c43183c25c2e2ab",
            "subnet_id": "subnet-0283acd3668055450"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028a2c3da23007f98",
            "route_table_id": "rtb-03c43183c25c2e2ab",
            "subnet_id": "subnet-08f03b5ff4b637649"
          },
          "dependencies": [
            "module.resources.aws_route_table.route-table",
            "module.resources.aws_subnet.worker-subnets",
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:security-group/sg-0fddaf0df8f9010b6",
            "description": "Security group for coord worker instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0fddaf0df8f9010b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "12.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WorkerSecurityGroup",
            "name_prefix": "",
            "owner_id": "058264225399",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "worker-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-08488290d59dc9351",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "12.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08488290d59dc9351",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-0a91dc68987c391cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91dc68987c391cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-07a6e3f8960c13c86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a6e3f8960c13c86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-0af862dc61e1aa13f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af862dc61e1aa13f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-0283acd3668055450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "12.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0283acd3668055450",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:subnet/subnet-08f03b5ff4b637649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "12.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f03b5ff4b637649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264225399",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-067c83fb7a6404653"
          },
          "dependencies": [
            "module.resources.aws_vpc.engine-vpc",
            "module.resources.data.aws_availability_zone.available",
            "module.resources.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "engine-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264225399:vpc/vpc-067c83fb7a6404653",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-040f45964b06a74cb",
            "default_route_table_id": "rtb-0dcdfa0e4baee0b37",
            "default_security_group_id": "sg-08ba1ccfa542e9bdd",
            "dhcp_options_id": "dopt-09e0107c46a376f07",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067c83fb7a6404653",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dcdfa0e4baee0b37",
            "owner_id": "058264225399"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}